--- a/README
+++ b/README
@@ -21,7 +21,10 @@ EX:
 
 ==> :bar
 
-to install, add 
+Note: If you attempt to return-from a block on a different thread
+than the one that established the block, you will get a runtime error.
+
+To install, add:
 
 :dependencies [[clj-return-from "1.0.0"]]
 
